feat: Add core packages

--- a/playbooks/system/system.yml
+++ b/playbooks/system/system.yml
@@ -8,8 +8,10 @@
     # TODO: create users, etc
 
   roles:
-    - foo
-    - bar
+    - core
+    - foreign
+    - optional
+    - make
 
   post_tasks:
     - name: List all explicitly-installed packages
