fix: Too few spaces before comment

--- a/playbooks/system/roles/lightdm/defaults/main.yml
+++ b/playbooks/system/roles/lightdm/defaults/main.yml
@@ -1,3 +1,3 @@
 lightdm_packages:
   - light-locker  # A simple session locker for LightDM
-  - lightdm-portico-greeter  # Pantheon greeter for LightDM
+  - lightdm-portico-greeter  # A Pantheon greeter for LightDM
