fix: Don't need relative path

--- a/playbooks/system/roles/ansible/tasks/tasks.yml
+++ b/playbooks/system/roles/ansible/tasks/tasks.yml
@@ -11,7 +11,7 @@
 
 - name: Install hosts file
   ansible.builtin.copy:
-    src: "../files/hosts"
+    src: "files/hosts"
     dest: "/etc/ansible/hosts"
     owner: root
     group: root
