--- a/playbooks/system/roles/magic-mouse/tasks/tasks.yml
+++ b/playbooks/system/roles/magic-mouse/tasks/tasks.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install module configuration
   ansible.builtin.copy:
-    src: "../files/etc/modprobe.d/hid_magicmouse.conf"
+    src: "files/etc/modprobe.d/hid_magicmouse.conf"
     dest: "/etc/modprobe.d/hid_magicmouse.conf"
     owner: root
     group: root
@@ -9,7 +9,7 @@
 
 - name: Install udev rule
   ansible.builtin.copy:
-    src: "../files/etc/udev/rules.d/brcm_pm.rules"
+    src: "files/etc/udev/rules.d/brcm_pm.rules"
     dest: "/etc/udev/rules.d/brcm_pm.rules"
     owner: root
     group: root
@@ -17,7 +17,7 @@
 
 - name: Install bluetooth configuration
   ansible.builtin.copy:
-    src: "../files/etc/bluetooth/input.conf"
+    src: "files/etc/bluetooth/input.conf"
     dest: "/etc/bluetooth/input.conf"
     owner: root
     group: root
@@ -25,7 +25,7 @@
 
 - name: Install mouse configuration
   ansible.builtin.copy:
-    src: "../files/etc/X11/xorg.conf.d/10-mouse.conf"
+    src: "files/etc/X11/xorg.conf.d/10-mouse.conf"
     dest: "/etc/X11/xorg.conf.d/10-mouse.conf"
     owner: root
     group: root
